<resources>
    <string name="app_name">AndroidProjectCollection</string>
    <string name="btn_back">back to main</string>

    <string name="btn_app_layout">Open Layout Exercise</string>
    <string name="layout_app">Mugstagram</string>
    <string name="plntxt_comment">type comment here...</string>
    <string name="txt_invisible">ㅤ</string>
    <string name="btn_comment">Comment</string>
    <string name="txt_reply_template">{comment placeholder}</string>
    <string name="prof1_name">John Doe</string>
    <string name="prof2_name">Jane Doe</string>
    <string name="prof3_name">Dranko Fullbody</string>
    <string name="prof4_name">Josh Drake</string>
    <string name="prof5_name">Sammy Samir</string>
    <string name="prof6_name">Blair Whitney</string>
    <string name="prof7_name">Axel Lamenco</string>
    <string name="prof8_name">Needles Kane</string>

    <string name="btn_app_button">Open Button Exercise</string>
    <string name="btn_disappear">Evanesco!</string>
    <string name="btn_toast">Toast?</string>
    <string name="btn_change_buttonBG">Change this color</string>
    <string name="btn_change_appBG">Change application bg color</string>

    <string name="btn_app_calculator">Open Calculator</string>
    <string name="btn_0">0</string>
    <string name="btn_1">1</string>
    <string name="btn_2">2</string>
    <string name="btn_3">3</string>
    <string name="btn_4">4</string>
    <string name="btn_5">5</string>
    <string name="btn_6">6</string>
    <string name="btn_7">7</string>
    <string name="btn_8">8</string>
    <string name="btn_9">9</string>
    <string name="btn_decimal">.</string>
    <string name="btn_add">+</string>
    <string name="btn_subtract">-</string>
    <string name="btn_multiply">*</string>
    <string name="btn_divide">/</string>
    <string name="btn_equals">=</string>
    <string name="btn_cancel">C</string>

    <string name="btn_app_midterm">Play Tic Tac Toe</string>
    <string name="tv_gametitle">TICTACTOE</string>
    <string name="btn_playtictactoe">Play</string>
    <string name="btn_quitgame">RAGE QUIT</string>
    <string name="btn_resetgame">RESET</string>
    <string name="tv_gamestate_p1turn">Player O\'s turn</string>
    <string name="tv_gamestate_p2turn">Player X\'s turn</string>
    <string name="tv_gamestate_p1win">Player O Wins!</string>
    <string name="tv_gamestate_p2win">Player X Wins!</string>
    <string name="tv_gamestate_lose">Stalemate!</string>

    <string name="btn_app_connectThree">Play Connect Three</string>
    <string name="ct_btn_back">Back</string>
    <string name="ct_btn_reset">Reset Game</string>
    <string name="ct_tv_state">Player 1 turn</string>
    <string name="ct_btn_drop">▼</string>
    <string name="ct_tv_tip">Click the \'▼\' to play</string>

    <string name="btn_app_passingIntents">Passing Intents</string>
    <string name="pi_tv_title">Student Registration Form</string>
    <string name="pi2_tv_title">Student Profile</string>
    <string name="pi_tv_name">Complete Name</string>
    <string name="pi_tv_name_first">First Name</string>
    <string name="pi_tv_name_last">Last Name</string>
    <string name="pi_tv_gender">Gender</string>
    <string name="pi_tv_gender_male">Male</string>
    <string name="pi_tv_gender_female">Female</string>
    <string name="pi_tv_gender_other">Other</string>
    <string name="pi_tv_birth_date">Birth Date</string>
    <string name="pi_tv_birth_place">Birth Place</string>
    <string name="pi_tv_phoneno">Phone Number</string>
    <string name="pi_tv_email">Email Address</string>
    <string name="pi_tv_parent1">Parent 1</string>
    <string name="pi_tv_parent2">Parent 2</string>
    <string name="pi_tv_parent_occupation">Occupation</string>
    <string name="pi_btn_clear">Clear</string>
    <string name="pi_btn_submit">Submit</string>


    <string name="btn_app_fragments">Fragements</string>

    <string name="btn_app_menus">Menus</string>

    <string name="what">\?\?\?</string>

    <string name="btn_app_map">Open Maps</string>
    <string name="map_tv_title">Where would you like to go???</string>
    <string name="map_tv_elcap">El Capitan</string>
    <string name="map_tv_siargao">Siargao Retreat</string>
    <string name="map_tv_tokyo">Tokyo Tower</string>
    <string name="map_tv_rabbit">Fying Rabbit</string>
    <string name="map_tv_monica">Santa Monica Studios</string>

</resources>